editor z-index fixes

--- a/themes/grav/scss/template/_editor.scss
+++ b/themes/grav/scss/template/_editor.scss
@@ -15,7 +15,7 @@
         border-radius: 0 0 3px 3px;
         margin-top: -2px;
         position: relative;
-        z-index: 10;
+        z-index: 1;
     }
     .CodeMirror-selected {
         background: #ebf4ff;
@@ -170,6 +170,7 @@
     &.CodeMirror {
         color: $paper-fg;
         line-height: 1.4;
+        z-index: 1;
     }
 
     .cm-link {color: #0082ba;}
